11/12: There will be a new homework posted for next week, but I have been delayed in posting it.  It will be up by Monday at the latest, and I will give you until the following Monday at noon to finish it.
11/8: The [Exam2Outline.pdf outline] and [SampleExam2.pdf sample exam questions] for Exam 2 are now online; the [SampleExam2S.pdf solutions] <B>are now available</B>.  The exam is actually a combination of two different exams (with some problems removed), which is why it's repetitive; I didn't think you'd mind.
11/7: There is <b>no</b> lab (PHYS103) this week, for anyone.
11/5: Here are the [Energy.pdf energy worksheets] that we have been working through in class, along with the [EnergySolutions.pdf solutions].  (Please don't refer to the solutions until after you've worked through the problem.) <B>Update 11/7:</B> There was an error in the solution to the last problem; it has been fixed.  (The answer is 4m, not 0.4m.)
11/2: Exam 2 will be on <B>Monday, November 14th</B> and will cover torque, equilibrium, angular kinematics, and momentum.  Review outlines to come by this weekend.
10/14: The exam solutions are now available in the Exams tab; the graded exams will be returned on Monday.  Note that the official "midterm grades" do not include the exam, but are an even mixture of Quiz and Homework.  If you received a midterm grade of "F" that means that you have not been showing up for quizzes and/or not completing the homework, which is a really good way to fail.  If you are having difficulties, please come talk to me during office hours or send me an email. 
10/12: Exam solutions will be posted soon; exams will be graded by Monday at the latest.
10/7: Problems 9-14 on the online homework are on material I ended up deciding not to cover last week.  Please feel free to skip them; I've set them up as "practice" problems so you won't be penalized.  Sorry. :(
10/3: Review materials for the first exam can now be found in the Exams tab.