@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+<DIV class="updated">Posted 11/14:</DIV>
+ The next homework assignment is now available.  It is due next Tuesday at 11:59pm.  There will be no homework assigned next week over the Thanksgiving break.
+<li>
 <DIV class="updated">Posted 11/12:</DIV>
  There will be a new homework posted for next week, but I have been delayed in posting it.  It will be up by Monday at the latest, and I will give you until the following Monday at noon to finish it.
 <li>
@@ -141,7 +144,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TH>#<TH>Starting
 <TH>Monday
 <TH>Wednesday
-<TH>Friday<TR><TD class="weeknumber">13
+<TH>Friday<!--13,13--><TR class="current"><TD class="weeknumber">13
 <TD class="date">11/14
 <TD class="topic">Thermal Energy	<TD class="chapter">11
 
@@ -158,7 +161,7 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TD>
 	&nbsp;<BR>
 	&nbsp;
-<!--12,12--><TR class="current"><TD class="weeknumber">12
+<TR><TD class="weeknumber">12
 <TD class="date">11/7
 <TD class="topic">Energy<BR>Thermal Energy	<TD class="chapter">11
 
