@@ -1,3 +1,4 @@
+11/14: The next homework assignment is now available.  It is due next Tuesday at 11:59pm.  There will be no homework assigned next week over the Thanksgiving break.
 11/12: There will be a new homework posted for next week, but I have been delayed in posting it.  It will be up by Monday at the latest, and I will give you until the following Monday at noon to finish it.
 11/8: The [Exam2Outline.pdf outline] and [SampleExam2.pdf sample exam questions] for Exam 2 are now online; the [SampleExam2S.pdf solutions] <B>are now available</B>.  The exam is actually a combination of two different exams (with some problems removed), which is why it's repetitive; I didn't think you'd mind.
 11/7: There is <b>no</b> lab (PHYS103) this week, for anyone.
